[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/Menu.gd" type="Script" id=1]

[node name="Control" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 20.0
margin_top = 13.0
margin_right = 20.0
margin_bottom = 27.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_bottom = 14.0

[node name="game_over" type="Label" parent="CenterContainer/VBoxContainer/Label"]
margin_left = 440.0
margin_top = 157.0
margin_right = 524.0
margin_bottom = 229.0
text = "GAME OVER"
align = 1
valign = 1

[node name="tela_inicial" type="Button" parent="CenterContainer/VBoxContainer/Label"]
margin_left = 406.0
margin_top = 274.0
margin_right = 568.0
margin_bottom = 294.0
text = "VOLTAR A TELA INICIAL"

[node name="reiniciar" type="Button" parent="CenterContainer/VBoxContainer/Label"]
margin_left = 406.0
margin_top = 245.0
margin_right = 568.0
margin_bottom = 265.0
text = "REINICIAR JOGO"

[connection signal="pressed" from="CenterContainer/VBoxContainer/Label/tela_inicial" to="." method="_on_tela_inicial_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Label/reiniciar" to="." method="_on_reiniciar_pressed"]
