[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/Menu.gd" type="Script" id=1]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 476.0
margin_top = 293.0
margin_right = 547.0
margin_bottom = 307.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 71.0
margin_bottom = 14.0
text = "MEU GAME"

[node name="start" type="Button" parent="CenterContainer/VBoxContainer/Label"]
margin_left = 12.0
margin_top = 15.0
margin_right = 62.0
margin_bottom = 35.0
text = "START"

[node name="quit" type="Button" parent="CenterContainer/VBoxContainer/Label"]
margin_left = 14.0
margin_top = 39.0
margin_right = 59.0
margin_bottom = 59.0
text = "QUIT"

[connection signal="pressed" from="CenterContainer/VBoxContainer/Label/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Label/quit" to="." method="_on_quit_pressed"]
